# http-network-relay

./: .gitignore  .pre-commit-config.yaml  README.md  credentials.example.json  flake.nix  pyproject.toml  server.py
.github/workflows/: build.yml  test.yml
http_network_relay/: access_client.py  client.py  edge_agent.py  network_relay.py  network_relay_for_access_clients.py  network_relay_tcp_tunnel.py  pydantic_models.py  server.py  ssh_proxy_command.py
http_network_relay/tests/: test_run_all.py
