[tool.poetry]
name = "http-network-relay"
version = "0.1.0"
description = ""
authors = ["Eli Kogan-Wang <elikowa@gmail.com>", "Adrian Block <adrian@thymis.io>"]
readme = "README.md"
packages = [
    { include = "http_network_relay" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.9.2"
websockets = "^14.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
client = 'http_network_relay.client:main'
server = 'http_network_relay.server:main'
ssh-proxy-command = 'http_network_relay.ssh_proxy_command:main'
